Wed Jun 30 20:42:53 CEST 2004   Nis Joergensen  <nis@superlativ.dk>

	* gtkboard.c: fix bug that disallowed certain legal moves.

Mon Jun 28 16:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boards.xml: Add 2 new designs by Ruth Schneider and Ausbilder Schmidt

Mon Jun 28 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgamelist.c: Allow last move to be selected in game list
	* render.c: Small bug in design dialog

Sun Jun 27 11:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: Fixed bug - 2d chequers disappearing if dragged off board
	* positionid.c: Fixed bug - illegal position id's not being errored

Sat Jun 26 16:49:31 CEST 2004  Nis Joergensen  <nis@superlativ.dk>

	* speed.c (CommandCalibrate): Speed Calibration" now avoids using the
	same seed for randomization every time, so gives reliable results on
	consecutive runs.
	* gtkboard.c: Dragging checkers allows for pick-and-pass. The logic I
	have implemented is to hit if possible, and if there are two options,
	hit with the "left" die (ie highest in standard setup). I am still
	working on undo of pick-and-pass.
	* play.c: Gnubg allows you to resign AFTER you roll, based on what you
	rolled.  This actually fixes a way to cheat - resigning if your equity
	drops to below -1 or -2  when you roll.

Thu Jun 17 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c, gtkgamelist.c: Fixes for styles in gamelist

Wed Jun 16 20:50:46 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.gtkrc.in: backport changes to gnubg.gtkrc

Wed Jun 16 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c, gtkboard.c, gnubg.gtkrc: separate styles for current
	move and done move in move list

Wed Jun 16 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c: use move style for hint window, also removed highlight
	code from several files

Tue Jun 15 20:32:05 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.gtkrc.in: autogenerate gnubg.gtkrc
